force-app/main/default/objects/Product2/fields/Bundle__c.field-meta.xml
<CustomField>
    <fullName>Bundle__c</fullName>
    <label>Level</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Svenska</fullName>
            </value>
            <value>
                <fullName>Engelska</fullName>
            </value>
            <value>
                <fullName>SO</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>Quiz</fullName>
            </value>
            <value>
                <fullName>Naturfagspakken</fullName>
            </value>
            <value>
                <fullName>Kulturfagspakken</fullName>
            </value>
            <value>
                <fullName>Sprogfaspakken</fullName>
            </value>
            <value>
                <fullName>Dansk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>