force-app/main/default/objects/Product2/fields/Bundled_Offering__c.field-meta.xml
<CustomField>
    <fullName>Bundled_Offering__c</fullName>
    <label>Bundled Offering</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>