force-app/main/default/objects/Product2/fields/Clio_MinimumPrice__c.field-meta.xml
<CustomField>
    <fullName>Clio_MinimumPrice__c</fullName>
    <description>Field used for the minimum quantity price rules - only on products that require it.</description>
    <inlineHelpText>Field used for the minimum quantity price rules - only on products that require it.</inlineHelpText>
    <label>Minimum Price</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>