force-app/main/default/objects/Product2/fields/Count_Product__c.field-meta.xml
<CustomField>
    <fullName>Count_Product__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Product</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>