force-app/main/default/objects/Product2/fields/Department_Code__c.field-meta.xml
<CustomField>
    <fullName>Department_Code__c</fullName>
    <description>NAV intergration</description>
    <label>Department Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3407-300</fullName>
            </value>
            <value>
                <fullName>3407-170</fullName>
            </value>
            <value>
                <fullName>3417-300</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>