force-app/main/default/objects/Product2/fields/Draft__c.field-meta.xml
<CustomField>
    <fullName>Draft__c</fullName>
    <defaultValue>false</defaultValue>
    <description>use for massupdate checkbox</description>
    <inlineHelpText>use for massupdate checkbox</inlineHelpText>
    <label>Draft</label>
    <type>Checkbox</type>
</CustomField>