force-app/main/default/objects/Product2/fields/Inactive_Pricing_Method__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Pricing_Method__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use to flag those products with Block pricing that have been retired in conjunction with the 2022 price list</description>
    <inlineHelpText>Use to flag those products with Block pricing that have been retired in conjunction with the 2022 price list</inlineHelpText>
    <label>Inactive Pricing Method</label>
    <type>Checkbox</type>
</CustomField>