force-app/main/default/objects/Product2/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <inlineHelpText>Educational Stage</inlineHelpText>
    <label>Level</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Högstadiet</fullName>
            </value>
            <value>
                <fullName>Mellanstadiet</fullName>
            </value>
            <value>
                <fullName>Förberedelseklass</fullName>
            </value>
            <value>
                <fullName>Børnehaveklasse/0. Klasse</fullName>
            </value>
            <value>
                <fullName>Indskolning</fullName>
            </value>
            <value>
                <fullName>Mellemtrin</fullName>
            </value>
            <value>
                <fullName>Udskolning</fullName>
            </value>
            <value>
                <fullName>10. Klasse</fullName>
            </value>
            <value>
                <fullName>All</fullName>
                <isActive>false</isActive>
                <label>All</label>
            </value>
            <value>
                <fullName>Børnehaveklasse</fullName>
                <isActive>false</isActive>
                <label>Børnehaveklasse</label>
            </value>
            <value>
                <fullName>Børnehaveklassen</fullName>
                <isActive>false</isActive>
                <label>Børnehaveklassen</label>
            </value>
            <value>
                <fullName>Lågsta</fullName>
                <isActive>false</isActive>
                <label>Lågsta</label>
            </value>
            <value>
                <fullName>TBC</fullName>
                <isActive>false</isActive>
                <label>TBC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>