force-app/main/default/objects/Product2/fields/NAV_Prod_No__c.field-meta.xml
<CustomField>
    <fullName>NAV_Prod_No__c</fullName>
    <description>Usw to sync with Navision</description>
    <inlineHelpText>Usw to sync with Navision</inlineHelpText>
    <label>NAV Prod No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>