force-app/main/default/objects/Product2/fields/NAV_Type__c.field-meta.xml
<CustomField>
    <fullName>NAV_Type__c</fullName>
    <description>NAV intergration</description>
    <inlineHelpText>NAV intergration</inlineHelpText>
    <label>NAV Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Item</fullName>
                <default>true</default>
                <label>Item</label>
            </value>
            <value>
                <fullName>G/L Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>