force-app/main/default/objects/Product2/fields/Navision_Prod_No__c.field-meta.xml
<CustomField>
    <fullName>Navision_Prod_No__c</fullName>
    <externalId>true</externalId>
    <label>Navision Prod No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>