force-app/main/default/objects/Product2/fields/Navision_Prod_No_BACKUP__c.field-meta.xml
<CustomField>
    <fullName>Navision_Prod_No_BACKUP__c</fullName>
    <description>use for backup field</description>
    <inlineHelpText>vuse for backup field</inlineHelpText>
    <label>Navision Prod No BACKUP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>