force-app/main/default/objects/Product2/fields/Product_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Product_Bundle__c</fullName>
    <label>Product Bundle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bundle</fullName>
            </value>
            <value>
                <fullName>Individual_Product</fullName>
                <label>Individual Product</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>