force-app/main/default/objects/Product2/fields/Product_Domain_Layer_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Domain_Layer_Id__c</fullName>
    <description>Sync from zero</description>
    <inlineHelpText>Sync from zero</inlineHelpText>
    <label>Product Domain Layer Id</label>
    <type>TextArea</type>
</CustomField>