force-app/main/default/objects/Product2/fields/Product_ID_18_Characters__c.field-meta.xml
<CustomField>
    <fullName>Product_ID_18_Characters__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product ID - 18 Characters</label>
    <type>Text</type>
</CustomField>