force-app/main/default/objects/Product2/fields/Product_No__c.field-meta.xml
<CustomField>
    <fullName>Product_No__c</fullName>
    <label>Product No</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>