force-app/main/default/objects/Product2/fields/Product_Zero_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Zero_Id__c</fullName>
    <description>Unique Id from Zero.</description>
    <externalId>true</externalId>
    <label>Product Zero Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>