force-app/main/default/objects/Product2/fields/Relevant_Grade__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Grade__c</fullName>
    <label>Relevant Grade</label>
    <length>12</length>
    <type>Text</type>
</CustomField>