force-app/main/default/objects/Product2/fields/Send_to_NAV__c.field-meta.xml
<CustomField>
    <fullName>Send_to_NAV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to NAV</label>
    <type>Checkbox</type>
</CustomField>