force-app/main/default/objects/Product2/listViews/Active_Swedish_Products_Mellanstadiet.listView-meta.xml
<ListView>
    <fullName>Active_Swedish_Products_Mellanstadiet</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Product_Bundle__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>SBQQ__SubscriptionType__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Navision_Prod_No__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>SBQQ__SortOrder__c</columns>
    <columns>SBQQ__PriceEditable__c</columns>
    <columns>Clio_MinimumPrice__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country_Code__c</field>
        <operation>equals</operation>
        <value>SE</value>
    </filters>
    <filters>
        <field>Product_Type__c</field>
        <operation>equals</operation>
        <value>Clio Online Portal</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Level__c</field>
        <operation>equals</operation>
        <value>Mellanstadiet</value>
    </filters>
    <filters>
        <field>Product_Bundle__c</field>
        <operation>equals</operation>
        <value>Individual_Product</value>
    </filters>
    <label>Active Swedish Products - Mellanstadiet</label>
</ListView>