force-app/main/default/objects/Product2/listViews/All_Active_DK_Products.listView-meta.xml
<ListView>
    <fullName>All_Active_DK_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Product_Bundle__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>SBQQ__SubscriptionType__c</columns>
    <columns>Product_Type__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>SBQQ__SortOrder__c</columns>
    <columns>SBQQ__PriceEditable__c</columns>
    <columns>SBQQ__PricingMethod__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country_Code__c</field>
        <operation>equals</operation>
        <value>DK</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Active DK Products</label>
</ListView>