force-app/main/default/objects/Product2/listViews/All_DK_Products.listView-meta.xml
<ListView>
    <fullName>All_DK_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>SBQQ__SortOrder__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Product_Bundle__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>SBQQ__PricingMethod__c</columns>
    <columns>Clio_MinimumPrice__c</columns>
    <columns>Relevant_Grade__c</columns>
    <columns>Relevant_Grade_Picklist__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country_Code__c</field>
        <operation>equals</operation>
        <value>DK</value>
    </filters>
    <label>DK Products - All Active</label>
</ListView>