force-app/main/default/objects/Product2/listViews/Bundle.listView-meta.xml
<ListView>
    <fullName>Bundle</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Level__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.NAME</field>
        <operation>contains</operation>
        <value>paket</value>
    </filters>
    <label>Bundle</label>
    <sharedTo>
        <role>Admin</role>
    </sharedTo>
</ListView>