force-app/main/default/objects/Product2/listViews/Copy_of_DK_Products_Not_Active.listView-meta.xml
<ListView>
    <fullName>Copy_of_DK_Products_Not_Active</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Bundle__c</columns>
    <columns>Level__c</columns>
    <columns>Country_Code__c</columns>
    <columns>SBQQ__PricingMethod__c</columns>
    <columns>Product_Category__c</columns>
    <columns>Product_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country_Code__c</field>
        <operation>equals</operation>
        <value>DK</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>DK Products - Not Active</label>
</ListView>