force-app/main/default/objects/Product2/listViews/DK_Products_All_Active_w_Min_Price.listView-meta.xml
<ListView>
    <fullName>DK_Products_All_Active_w_Min_Price</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>SBQQ__SortOrder__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Level__c</columns>
    <columns>SBQQ__PricingMethod__c</columns>
    <columns>Navision_Prod_No__c</columns>
    <columns>NAV_Prod_No__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country_Code__c</field>
        <operation>equals</operation>
        <value>DK</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Clio_MinimumPrice__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>DK Products - All Active w Min Price</label>
    <sharedTo>
        <role>Admin</role>
    </sharedTo>
</ListView>